Componente para crear Equipos

--- a/src/app/equipos/equipos.component.html
+++ b/src/app/equipos/equipos.component.html
@@ -1,4 +1,4 @@
-<div class="MULTI-BAR-addButton">
+<div class="MULTI-BAR-addButton" (click)="changeToCreateTeam()">
     <img class="image-friend" height="30" width="auto"
         src="https://flaticons.net/icon.php?slug_category=application&slug_icon=group-add" alt="">
     Nuevo Equipo
