Vista para la creacion de equipo: incompleta

--- a/src/app/create-team/create-team.component.html
+++ b/src/app/create-team/create-team.component.html
@@ -1,5 +1,24 @@
 <div class="createTeam-Block">
-    <h2>Create Team</h2>
+    <h2>CREAR EQUIPO</h2>
     <label for="">NOMBRE DE EQUIPO</label>
     <input type="text">
+    <label for="">TAG DE EQUIPO</label>
+    <input type="text">
+    <label for="">JUEGO</label>
+    <div class="custom-select" style="width:200px;">
+        <select>
+          <option value="0">DOTA 2</option>
+          <option value="1">LEAGUE OF LEGENDS</option>
+          <option value="2">COUNTER STRIKE: GLOBAL OFFENSIVE</option>
+        </select>
+    </div>
+    <label for="">PORTADA</label>
+    <input type="file">
+    <label for="">LOGO</label>
+    <label class="fileUpload">
+        <span>Seleccionar imagen</span>
+        <input type="file" class="file">
+    </label>
+
+    <button type="submit">Continuar</button>
 </div>
