Ahora se carga los equipos en su seccion

--- a/src/app/create-team/create-team.component.html
+++ b/src/app/create-team/create-team.component.html
@@ -13,7 +13,10 @@
         </select>
     </div>
     <label for="">PORTADA</label>
-    <input type="file">
+    <label class="fileUpload">
+        <span>Seleccionar imagen</span>
+        <input type="file" class="file">
+    </label>
     <label for="">LOGO</label>
     <label class="fileUpload">
         <span>Seleccionar imagen</span>
