--- a/src/app/equipos/equipos.component.css
+++ b/src/app/equipos/equipos.component.css
@@ -22,3 +22,27 @@
     width: auto;
     height: 28px;
 }
+
+.MULTI-BAR-clan{
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    padding: 6.5px;
+    font-family: 'Barlow', sans-serif;
+    padding-left: 20px;
+    color: rgb(47, 255, 134);
+}
+
+.MULTI-BAR-clan:hover{
+    background-color: rgb(51, 63, 55);
+    cursor: pointer;
+}
+
+.image-clan{
+    border-radius: 25%;
+    margin-right: 15px;
+    width: auto;
+    height: 28px;
+}
