--- a/src/app/equipos/equipos.component.html
+++ b/src/app/equipos/equipos.component.html
@@ -3,3 +3,8 @@
         src="https://flaticons.net/icon.php?slug_category=application&slug_icon=group-add" alt="">
     Nuevo Equipo
 </div>
+<div class="MULTI-BAR-clan" *ngFor="let team of teams">
+    <img class="image-friend" height="30" width="auto"
+        src="https://flaticons.net/icon.php?slug_category=application&slug_icon=group-add" alt="">
+    {{team.nombre}}
+</div>
