--- a/src/app/create-team/create-team.component.css
+++ b/src/app/create-team/create-team.component.css
@@ -1,9 +1,9 @@
 .createTeam-Block{
     display: flex;
     flex-direction: column;
-    padding: 200px;
-    padding-top: 25px;
-    padding-bottom: 50px;
+    margin: 100px;
+    margin-top: 20px;
+
     color: white;
     font-family: 'Lato', sans-serif;
 }
