cambio de color en equipos

--- a/src/app/equipos/equipos.component.html
+++ b/src/app/equipos/equipos.component.html
@@ -4,7 +4,7 @@
     Nuevo Equipo
 </div>
 <div class="MULTI-BAR-clan" *ngFor="let team of teams">
-    <img class="image-friend" height="30" width="auto"
-        src="https://flaticons.net/icon.php?slug_category=application&slug_icon=group-add" alt="">
+    <img class="image-clan" height="30" width="auto"
+        src="https://pbs.twimg.com/profile_images/667794242014568449/U4E_UnyC_400x400.png" alt="">
     {{team.nombre}}
 </div>
