Cambio de colores

--- a/src/app/equipos/equipos.component.html
+++ b/src/app/equipos/equipos.component.html
@@ -6,5 +6,5 @@
 <div class="MULTI-BAR-clan" *ngFor="let team of teams">
     <img class="image-clan" height="30" width="auto"
         src="https://pbs.twimg.com/profile_images/667794242014568449/U4E_UnyC_400x400.png" alt="">
-    {{team.nombre}}
+    {{team.acronimo}}
 </div>
