--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 :root{
-    --tb-first-color: rgba(28, 12, 51, 1);;
-    --tb-second-color: rgb(15, 5, 28);
+    --tb-first-color: rgb(38, 41, 43);;
+    --tb-second-color: rgb(22, 23, 24);
     --tb-third-color: brown;
+    --tb-border-color: rgb(14, 13, 13);
+    --tb-bar-color: rgb(28, 26, 26);
+    --tb-barBG-color: rgb(53, 50, 50);
 }
 
 
 body{
-    box-shadow: inset 0px 0px 150px 150px rgba(0, 0, 0, 0.9);
+    box-shadow: inset 0px 0px 150px 150px rgba(82, 81, 81, 0.9);
     margin: 0px;
     background-image: url("https://images.blz-contentstack.com/v3/assets/blt3452e3b114fab0cd/blt8aed4bd15844d3d9/5dbb292d24642a3b8da56e1b/Ardenweald_Postcard.jpg?auto=webp&quality=75");
     background-position: center center;
