Modificacion de los estilos

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -30,12 +30,12 @@
                     alt="">
                 <div class="Mensaje">
                     <div class="Mensaje-Nombre">
-                        Guztavito
+                        Player?
                     </div>
                     <div class="Mensaje-Contenido">
-                        El paralelismo de verdad fue el mejor detalle all in all Anyway; esperando a ver
-                        que trae el tataridamashi de sotsu. Cristo quiera y Lambdadelta sea salvada de ser
-                        retroactivamente arruinada No digo satoko porque too late for her lmao
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, alias debitis. 
+                        Quod, minus molestias architecto beatae nobis dolore a provident
+                         repudiandae? Sequi, perspiciatis exercitationem doloremque quisquam inventore necessitatibus error nostrum.
                     </div>
                 </div>
             </div>
@@ -44,12 +44,12 @@
                     alt="">
                 <div class="Mensaje">
                     <div class="Mensaje-Nombre">
-                        Guztavito
+                        Player77
                     </div>
                     <div class="Mensaje-Contenido">
-                        El paralelismo de verdad fue el mejor detalle all in all Anyway; esperando a ver
-                        que trae el tataridamashi de sotsu. Cristo quiera y Lambdadelta sea salvada de ser
-                        retroactivamente arruinada No digo satoko porque too late for her lmao
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, alias debitis. 
+                        Quod, minus molestias architecto beatae nobis dolore a provident
+                         repudiandae? Sequi, perspiciatis exercitationem doloremque quisquam inventore necessitatibus error nostrum.
                     </div>
                 </div>
             </div>
@@ -58,12 +58,12 @@
                     alt="">
                 <div class="Mensaje">
                     <div class="Mensaje-Nombre">
-                        Guztavito
+                        Player6
                     </div>
                     <div class="Mensaje-Contenido">
-                        El paralelismo de verdad fue el mejor detalle all in all Anyway; esperando a ver
-                        que trae el tataridamashi de sotsu. Cristo quiera y Lambdadelta sea salvada de ser
-                        retroactivamente arruinada No digo satoko porque too late for her lmao
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, alias debitis. 
+                        Quod, minus molestias architecto beatae nobis dolore a provident
+                         repudiandae? Sequi, perspiciatis exercitationem doloremque quisquam inventore necessitatibus error nostrum.
                     </div>
                 </div>
             </div>
@@ -72,12 +72,12 @@
                     alt="">
                 <div class="Mensaje">
                     <div class="Mensaje-Nombre">
-                        Guztavito
+                        Player3
                     </div>
                     <div class="Mensaje-Contenido">
-                        El paralelismo de verdad fue el mejor detalle all in all Anyway; esperando a ver
-                        que trae el tataridamashi de sotsu. Cristo quiera y Lambdadelta sea salvada de ser
-                        retroactivamente arruinada No digo satoko porque too late for her lmao
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, alias debitis. 
+                        Quod, minus molestias architecto beatae nobis dolore a provident
+                         repudiandae? Sequi, perspiciatis exercitationem doloremque quisquam inventore necessitatibus error nostrum.
                     </div>
                 </div>
             </div>
@@ -86,12 +86,12 @@
                     alt="">
                 <div class="Mensaje">
                     <div class="Mensaje-Nombre">
-                        Guztavito
+                        Player2
                     </div>
                     <div class="Mensaje-Contenido">
-                        El paralelismo de verdad fue el mejor detalle all in all Anyway; esperando a ver
-                        que trae el tataridamashi de sotsu. Cristo quiera y Lambdadelta sea salvada de ser
-                        retroactivamente arruinada No digo satoko porque too late for her lmao
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, alias debitis. 
+                        Quod, minus molestias architecto beatae nobis dolore a provident
+                         repudiandae? Sequi, perspiciatis exercitationem doloremque quisquam inventore necessitatibus error nostrum.
                     </div>
                 </div>
             </div>
