--- a/src/app/equipos-view/equipos-view.component.css
+++ b/src/app/equipos-view/equipos-view.component.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     padding-top: 100px;
+    background-color: var(--tb-second-color);
 }
 
 .flex-Table{
