--- a/src/app/equipos-view/equipos-view.component.html
+++ b/src/app/equipos-view/equipos-view.component.html
@@ -4,29 +4,17 @@
             <thead>
               <tr>
                 <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
+                <th scope="col">TAG DE EQUIPO</th>
+                <th scope="col">NOMBRE</th>
+                <th scope="col">PROPIETARIO</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr *ngFor="let team of teams">
                 <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
+                <td>{{team.acronimo}}</td>
+                <td>{{team.nombre}}</td>
+                <td>{{team.propietario}}</td>
               </tr>
             </tbody>
           </table>
