--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -2,7 +2,7 @@
 
 .TB-Chat{
     width: 100%;
-    background-color: rgb(27, 2, 41);
+    background-color: var(--tb-first-color);
     height: 100%;
     display: flex;
     font-family: 'Inter', sans-serif;
@@ -10,7 +10,7 @@
 
 .Chat-Channel{
     width: 100%;
-    background-color: rgb(27, 2, 41);
+    background-color: var(--tb-first-color);
     height: 85%;
     overflow: auto;
 }
@@ -18,13 +18,13 @@
 .Chat-Participantes{
     max-height: 100%;
     width: 28%;
-    background-color: rgb(22, 3, 34);
+    background-color: var(--tb-medium-color);
 }
 
 .Chat-Opciones{
     height: 100%;
     width: 9%;
-    background-color: rgb(18, 4, 28);
+    background-color: var(--tb-second-color);
 }
 
 .Chat-Content{
@@ -39,18 +39,20 @@
     padding-bottom: 20px;
     width: 100%;
     box-sizing: border-box;
+    border-top: var(--tb-border-color);
+    border-top-width: 1px;
+    border-top-style: solid;
 }
 
 .Chat-Input input{
     background-color: inherit;
     color: rgb(255, 255, 255);
     border-width: 0px;
-    border-bottom-width: 2px;
     width: 90%;
 }
 
 .Chat-Decorator{
-    background-color: rgb(44, 13, 61);
+    background-color: var(--tb-light-color);
     padding: 15px;
     border-radius: 5px;
 }
@@ -134,21 +136,14 @@
 }
 
 .Chat-Channel::-webkit-scrollbar {
-    -webkit-appearance: none;
+    background-color: var(--tb-second-color);
+    width: 10px;
 }
 .Chat-Channel::-webkit-scrollbar-thumb {
-    background-color: #176b1b;
+    background-color: var(--tb-first-color);
     border-radius: 3px;
     border: 1px solid #000000;
     height: 3px;
-}
-
-.Chat-Channel::-webkit-scrollbar:vertical {
-    width: 5px;
-}
-
-.Chat-Channel::-webkit-scrollbar:horizontal {
-    height: 5px;
 }
 
 .Chat-Channel::-webkit-scrollbar-track {
