--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,8 @@
     --tb-border-color: rgb(14, 13, 13);
     --tb-bar-color: rgb(28, 26, 26);
     --tb-barBG-color: rgb(53, 50, 50);
+    --tb-light-color: rgb(53, 56, 58);
+    --tb-medium-color: rgb(34, 36, 38);
 }
 
 
