--- a/src/app/equipos-view/equipos-view.component.html
+++ b/src/app/equipos-view/equipos-view.component.html
@@ -14,7 +14,7 @@
                 <th scope="row">1</th>
                 <td>{{team.acronimo}}</td>
                 <td>{{team.nombre}}</td>
-                <td>{{team.propietario}}</td>
+                <td>{{team.propietario.nickname}}</td>
               </tr>
             </tbody>
           </table>
