--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -33,13 +33,13 @@
                         src="https://scontent.faqp2-2.fna.fbcdn.net/v/t1.18169-9/15284958_1181099771980817_1951370256506626696_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=174925&_nc_eui2=AeFiKAfVXQe3wI0sX_u8WzQQ7SPLNtf3ywDtI8s21_fLAJ60LJD9s2DrzePPQhNfMGg07YE844iuGAomI7tDFQ5F&_nc_ohc=ZA3-6QFt9lkAX93VtD5&_nc_ht=scontent.faqp2-2.fna&oh=9c4f87596ecff7bee2ce2e3ee3b0cfa8&oe=612ED7A0"
                         alt="">
                     <div>
-                        {{perfil.nickname}}
+                        {{perfil?.nickname}}
                     </div>
                 </div>
             </li>
         </div>
     </nav>
-    <div class="TB-Slide-friends">
+    <div class="TB-Slide-friends" *ngIf="perfil != null">
         <li class="TB-bar" id="boton-equipos" (click)="showTeams()">Equipos</li>
         <div class="generic-component" [class.active]="isShowTeams">
             <app-equipos [profileID]="perfil.id" (response)="changeComponentView($event)"></app-equipos>
