Avanzando con estilos para view equipos

--- a/src/app/equipos/main-equipo/main-equipo.component.css
+++ b/src/app/equipos/main-equipo/main-equipo.component.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Georama:wght@300&display=swap');
 
 .TB-Chat{
     width: 100%;
@@ -22,8 +23,7 @@
 }
 
 .Chat-Opciones{
-    height: 100%;
-    width: 9%;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     background-color: var(--tb-second-color);
@@ -192,4 +192,98 @@
 
 .Chat-Channel::-webkit-scrollbar-track-piece {
     margin-bottom: 10px; 
+}
+
+.Equipo-Profile{
+    height: 100%;
+    background-color: var(--tb-medium-color);
+    position: relative;
+    overflow-y: visible;
+}
+
+.portada{
+    height: 250px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.portada img{
+    width: 100%;
+    height: auto;
+}
+
+.picture{
+    height: 200px;
+    width: 200px;
+    position: absolute;
+    top: 140px;
+    padding: 4px;
+    background-color: var(--tb-medium-color);
+    left: 75px;
+    overflow: hidden;
+}
+
+.picture img{
+    width: 100%;
+    height: 100%;
+}
+
+.minidetails{
+    width: 725px;
+    background-color: var(--tb-bar-color);
+    padding: 7px;
+    border-radius: 10px;
+    margin-left: 285px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+    align-items: center;
+    justify-items: center;
+    padding-left: 25px;
+}
+
+.button-soli{
+    cursor: pointer;
+    background-color: blueviolet;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.button-soli:hover{
+    transform: scale(1.03);
+    background-color: rgb(98, 7, 184);
+}
+
+.administrador{
+    background-color: var(--tb-bar-color);
+    width: 250px;
+    border-radius: 5px;
+
+}
+
+.adm-content{
+    background-color: black;
+}
+
+.bodyProfile{
+    font-family: 'Georama', sans-serif;
+    display: flex;
+    margin: 85px;
+    margin-top: 45px;
+}
+
+.bp-left{
+    width: 625px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: var(--tb-bar-color);
+    margin-right: 30px;
+}
+
+.nombre{
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    font-size: 24px;
 }
