--- a/src/app/equipos/main-equipo/main-equipo.component.html
+++ b/src/app/equipos/main-equipo/main-equipo.component.html
@@ -13,105 +13,33 @@
             <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
         </svg>
     </div>
-    <div class="Chat-Participantes">
-        <div class="Chat-Title">
-            # Team AEA
+    <div class="Equipo-Profile">
+        <div class="portada">
+            <img src="https://images8.alphacoders.com/380/380531.jpg" alt="">
         </div>
-        <div class="Seccion-Participantes">
-            <div class="Chat-Participante">
-                <img src="https://c-cl.cdn.smule.com/rs-s24/arr/13/0c/cea61b12-6324-4aa9-b6a4-c90592eb4d90.jpg"
-                    alt="">
-                Vladimir
-            </div>
-            <div class="Chat-Participante">
-                <img src="https://c-cl.cdn.smule.com/rs-s24/arr/13/0c/cea61b12-6324-4aa9-b6a4-c90592eb4d90.jpg"
-                    alt="">
-                Vladimir
-            </div>
-            <div class="Chat-Participante">
-                <img src="https://c-cl.cdn.smule.com/rs-s24/arr/13/0c/cea61b12-6324-4aa9-b6a4-c90592eb4d90.jpg"
-                    alt="">
-                Vladimir
-            </div>
+        <div class="picture">
+            <img src="https://cdn.cloudflare.steamstatic.com/apps/dota2/images/rubick_arcana/finger_of_death.png" alt="">
         </div>
-    </div>
-    <div class="Chat-Content">
-        <div class="Chat-Channel">
-            <div class="Chat-Mensaje">
-                <img src="https://c-cl.cdn.smule.com/rs-s50/arr/f7/3d/3943a2e2-53b2-47e5-a77f-4bb1cb2c384c.jpg"
-                    alt="">
-                <div class="Mensaje">
-                    <div class="Mensaje-Nombre">
-                        Player?
-                    </div>
-                    <div class="Mensaje-Contenido">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, alias debitis. 
-                        Quod, minus molestias architecto beatae nobis dolore a provident
-                         repudiandae? Sequi, perspiciatis exercitationem doloremque quisquam inventore necessitatibus error nostrum.
-                    </div>
+        <div class="minidetails">
+            <div class="md-tag">ELAD</div>
+            <div class="md-tamaño">55/31</div>
+            <div class="md-nacionalidad">PERU</div>
+            <div class="button-soli">Enviar Solicitud</div>
+        </div>
+
+        <div class="bodyProfile">
+            <div class="bp-left">
+                <div class="nombre">
+                    Black Ops Gaming
                 </div>
             </div>
-            <div class="Chat-Mensaje">
-                <img src="https://c-cl.cdn.smule.com/rs-s50/arr/f7/3d/3943a2e2-53b2-47e5-a77f-4bb1cb2c384c.jpg"
-                    alt="">
-                <div class="Mensaje">
-                    <div class="Mensaje-Nombre">
-                        Player77
-                    </div>
-                    <div class="Mensaje-Contenido">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, alias debitis. 
-                        Quod, minus molestias architecto beatae nobis dolore a provident
-                         repudiandae? Sequi, perspiciatis exercitationem doloremque quisquam inventore necessitatibus error nostrum.
-                    </div>
+            <div class="administrador">
+                <div class="adm-img">
+                    <img src="" alt="">
                 </div>
-            </div>
-            <div class="Chat-Mensaje">
-                <img src="https://c-cl.cdn.smule.com/rs-s50/arr/f7/3d/3943a2e2-53b2-47e5-a77f-4bb1cb2c384c.jpg"
-                    alt="">
-                <div class="Mensaje">
-                    <div class="Mensaje-Nombre">
-                        Player6
-                    </div>
-                    <div class="Mensaje-Contenido">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, alias debitis. 
-                        Quod, minus molestias architecto beatae nobis dolore a provident
-                         repudiandae? Sequi, perspiciatis exercitationem doloremque quisquam inventore necessitatibus error nostrum.
-                    </div>
-                </div>
-            </div>
-            <div class="Chat-Mensaje">
-                <img src="https://c-cl.cdn.smule.com/rs-s50/arr/f7/3d/3943a2e2-53b2-47e5-a77f-4bb1cb2c384c.jpg"
-                    alt="">
-                <div class="Mensaje">
-                    <div class="Mensaje-Nombre">
-                        Player3
-                    </div>
-                    <div class="Mensaje-Contenido">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, alias debitis. 
-                        Quod, minus molestias architecto beatae nobis dolore a provident
-                         repudiandae? Sequi, perspiciatis exercitationem doloremque quisquam inventore necessitatibus error nostrum.
-                    </div>
-                </div>
-            </div>
-            <div class="Chat-Mensaje">
-                <img src="https://c-cl.cdn.smule.com/rs-s50/arr/f7/3d/3943a2e2-53b2-47e5-a77f-4bb1cb2c384c.jpg"
-                    alt="">
-                <div class="Mensaje">
-                    <div class="Mensaje-Nombre">
-                        Player2
-                    </div>
-                    <div class="Mensaje-Contenido">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, alias debitis. 
-                        Quod, minus molestias architecto beatae nobis dolore a provident
-                         repudiandae? Sequi, perspiciatis exercitationem doloremque quisquam inventore necessitatibus error nostrum.
-                    </div>
-                </div>
+                <div class="adm-content"></div>
             </div>
         </div>
-        <div class="Chat-Input">
-            <div class="Chat-Decorator">
-                <input class="Chat-area" type="text" placeholder="Ingresa un mensaje aqui...">
-            </div>
-        </div>
+
     </div>
 </div>
