--- a/src/app/equipos/main-equipo/main-equipo.component.html
+++ b/src/app/equipos/main-equipo/main-equipo.component.html
@@ -34,10 +34,16 @@
                 </div>
             </div>
             <div class="administrador">
+                <div class="portrait"></div>
                 <div class="adm-img">
-                    <img src="" alt="">
+                    <img src="https://up.quizlet.com/1carcd-qGup4-256s.jpg" alt="">
+                </div>
+                <div class="adm-title">
+                    <h3>Rika Furude</h3>
+                    Administrador
                 </div>
                 <div class="adm-content"></div>
+                
             </div>
         </div>
 
